--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
             </ul>
             <p>You have permission to write any HTML below that you'd like to practice on:</p>
             <!--Write any of your own HTML below-->
+            
+                            hr {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;border: 0;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;height: 1px;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;background: #333;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;background-image: linear-gradient(to right, #ccc, #333, #ccc);<br>
+                }
 
 
 
